# QtWaitingSpinner

./: .gitignore  CMakeLists.txt  LICENSE  QtWaitingSpinner.cpp  QtWaitingSpinner.h  QtWaitingSpinner.pro  README.md  dialog.cpp  dialog.h  index.html  main.cpp  params.json  qtwaitingspinner.pro  qwaitingspinner.pri  qwaitingspinner.pro  waitingspinnerwidget.cpp  waitingspinnerwidget.h
QtWaitingSpinnerTest/: QtWaitingSpinnerTest.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
